--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-size: 12px;
         line-height: 1.5;
         overflow: hidden;
-        background: rgb(66, 66, 66);
+        background: #000000;
       }
 
       .ui {
